HelloUltraviolet/Fixtures/RejectedSource/Procedures/RecordMethodBodyExplicitReturn/Expected.uv
//! Expected diagnostic metadata for the RecordMethodBodyExplicitReturn rejected-source specimen.

expectedDiagnostic("E-TYP-1507", "rule.15.T-Record-Method-Body")
